# crawlee-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: platform_docker.yaml
.pnpm-store/v10/index/00/: 3563a4e3a48f3d6186464b94189803d711d809dff05e07a9950ee9ee5e0dc3-micromark-extension-gfm-strikethrough@2.1.0.json  (+2 more)
docs/platform/: mysql-production-checklist.md
docs/quick-start/code_examples/: playwright_baidu_news_example.py
examples/: __init__.py  juejin_playwright_sample.py
openspec/changes/web-crawler-task-platform/: design.md  proposal.md  tasks.md
platform/: README.md  dev-local.sh  docker-compose.yml
platform/api/: README.md  platform.db  pyproject.toml
platform/api/src/crawlee_platform/: __init__.py  ai_service.py  api_app.py  auth.py  config.py  db.py  deps.py  metrics.py  models.py  schemas.py
platform/api/src/crawlee_platform/worker/: main.py  runner.py
platform/api/tests/: conftest.py  test_api_lifecycle.py
platform/deploy/: k8s-worker-deployment.example.yaml
platform/docker/: Dockerfile.api  Dockerfile.worker  Dockerfile.worker-playwright
platform/docs/: RUNBOOK.md  THREAT_MODEL.md
platform/web/: .env  .env.development  .env.production  .env.staging  index.html  package.json  pnpm-lock.yaml  vite.config.ts
platform/web/docs/: AI_ELEMENTS_VUE.md
platform/web/types/: env.d.ts
src/crawlee/: _types.py  playwright_crawler.py
tests/integration/: test_juejin_playwright_sample.py
tests/unit/: test_concurrency_settings.py  test_playwright_crawler_legacy_import.py
(+806 files in other folders)
