[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'crawlee-platform'
version = '0.1.0'
description = 'Control plane API and worker for the Crawlee web console platform'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    'aiomysql>=0.2.0',
    'aiosqlite>=0.21.0',
    'asyncpg>=0.29.0',
    'crawlee',
    # Worker runs `python -m pip install --target deps`; uv-managed venvs may ship without pip.
    'pip>=24.0',
    'fastapi>=0.115.0',
    'greenlet>=3.0.0',
    'httpx>=0.27.0',
    'prometheus-client>=0.21.0',
    'pydantic-settings>=2.12.0',
    'pydantic>=2.11.0',
    'sqlalchemy[asyncio]>=2.0.0,<3.0.0',
    'uvicorn[standard]>=0.32.0',
]

[project.optional-dependencies]
dev = ['pytest-asyncio>=0.24.0', 'pytest>=8.0.0']

[project.scripts]
crawlee-platform-api = 'crawlee_platform.api_app:run'
crawlee-platform-worker = 'crawlee_platform.worker.main:run'

[tool.hatch.build.targets.wheel]
packages = ['src/crawlee_platform']

[tool.uv.sources]
crawlee = { path = '../..', editable = true }

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ['tests']
